hphp/test/zend/good/tests/classes/constants_basic_001.php.expectf

Attempt to access various kinds of class constants:
int(1)
float(1.5)
int(1)
float(1.5)
int(-1)
float(-1.5)
int(13)
string(%d) %s/constants_basic_001.php"
string(1) "C"
string(1) "C"
string(0) ""
int(1234)
int(456)
string(6) "hello1"
string(6) "hello2"
string(6) "hello2"
string(6) "hello2"

Expecting fatal error:

Fatal error: Couldn't find constant C::c19 in %s/constants_basic_001.php on line 48
